2000-11-23 11:11 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/rtl/idle.c
     ! Added Reset Logic to HB_IDLESTATE()

2000-11-23 19:50 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/rdd/dbfcdx/dbfcdx1.h
        *added forward declaration of _CDXTAG structure to compile
        in some C++ compilers (Watcom C++)

2000-11-23 10:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/rtl/idle.c
   * source/rtl/inkey.c
     ! Improved granularity of Idle Processing:
         - GC is called only once per Wait Session.
	 - Single Idle Task is performed for each itteration of hb_idleState() but never more than once per Wait Session.
	 - ReleaseCPU() is guaranteed to be the only code executing for the remainder of every Wait Session.

   /* Maurilio, Ryszard, Victor, could you please review and comment... */

2000-11-23 13:32 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/teditor.prg
      ! fixed K_DEL handling
   * source/rtl/idle.c
      ! fixed / changed to release cpu only if there are no pending keys. Works ok
        under OS/2. Please test under win32 (linux still lacks system call to release cpu).
        Note: since I can enter hb_IdleState() while waiting a certain amount of time to
              elapse (ie. Inkey(.1)) I cannot keep calling idle tasks but I have to exit
              hb_IdleState() every time an idle task has ended its execution. If I have
              time left to wait I'll reenter hb_IdleState() immediatly (executing next
              idle task).

2000-11-21 18:35 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcomp.c
     * Corrected 1 compiler warning.

   * source/pp/ppcore.c
     + Added s_bArray support logic to WorkDefine()

   * source/rtl/idle.c
     * Revered order of hb_gcCollectAll() and hb_releaseCPU();

2000-11-21 23:42 UTC-0100 JFL (mafact) <jfl@mafact.com>
   * source/vm/classes.c
     * minor modif after the last Stack tests
     * :EVAL forgot to release one created item